# orce_hand_ROS2

./: .gitignore  README.md  orca_hand_ROS2.code-workspace  requirement.yml
orca_hand_control/: package.xml  setup.cfg  setup.py
orca_hand_control/Tactile_sensor/Tac3D-SDK-v3.3.0/Tac3D-API/CPP/libTac3D/: CMakeLists.txt  main-example.cpp
orca_hand_control/Tactile_sensor/Tac3D-SDK-v3.3.0/Tac3D-API/CPP/libTac3D/inc/: libTac3D.hpp
orca_hand_control/Tactile_sensor/Tac3D-SDK-v3.3.0/Tac3D-API/CPP/libTac3D/src/: libTac3D.cpp
orca_hand_control/Tactile_sensor/Tac3D-SDK-v3.3.0/Tac3D-API/python/PyTac3D/: PyTac3D_Displayer2.py  main-example.py
orca_hand_control/Tactile_sensor/Tac3D-SDK-v3.3.0/Tac3D-API/python/Tac3DClient/: Tac3DClient.py  start-sensor-example.py
orca_hand_control/Tactile_sensor/Tac3D-SDK-v3.3.0/Tac3D-Core/linux-x86_64/DM1-GWM0021_Log/: log.txt
orca_hand_control/Tactile_sensor/Tac3D-SDK-v3.3.0/Tac3D-Core/linux-x86_64/config/: YDSt1-004.tcfg
orca_hand_control/Tactile_sensor/Tac3D-SDK-v3.3.0/Tac3D-Core/linux-x86_64/config/DM1-GWM0021/: checklist.yaml  datasheet.yaml  sensor.yaml
orca_hand_control/Tactile_sensor/Tac3D-SDK-v3.3.0/Tac3D-Core/linux-x86_64/config/DM1-GWM0021/ContactDetector/: HD_Matrix.csv
orca_hand_control/Tactile_sensor/Tac3D-SDK-v3.3.0/Tac3D-Core/linux-x86_64/config/DM1-GWM0021/DMP4_by_Zhang/: markers.txt  offsets.txt  offsets_ptr.txt  order.txt  seeds.txt  sequence.txt
orca_hand_control/Tactile_sensor/Tac3D-SDK-v3.3.0/Tac3D-Core/linux-x86_64/config/DM1-GWM0021/Reconstruction3D2/: faces.txt  (+1 more)
orca_hand_control/Tactile_sensor/Tac3D-SDK-v3.3.0/Tac3D-Core/linux-x86_64/config/YDSt1-004/: datasheet.yaml  sensor.yaml
orca_hand_control/Tactile_sensor/src/: test.py
orca_hand_control/launch/: orcahand.launch.py
orca_hand_control/msg/: TactileFrame.msg
orca_hand_control/orca_hand_control/: human_joint.py  human_joint_anlge.py  joint_publisher.py  orca_hand_control.py  tactile.py  test.py
orca_hand_control/orca_hand_control/models/urdf/: orcahand_left.urdf  orcahand_left_extended.urdf  orcahand_right.urdf  orcahand_right_extended.urdf
orca_hand_control/orca_hand_control/orca_core/models/orcahand_v1_left/: calibration.yaml  config.yaml
orca_hand_control/orca_hand_control/orca_core/models/orcahand_v1_right/: calibration.yaml  config.yaml
orca_hand_control/orca_hand_control/replay_sequences/: paper_1_continuous_angles_20250724_092410.yaml  paper_2_continuous_angles_20250724_092624.yaml  paper_3_continuous_angles_20250724_093340.yaml  paper_4_continuous_angles_20250724_094057.yaml
orca_hand_control/orca_hand_control/scripts/: test.py
src/orca_msgs/: CMakeLists.txt  package.xml
src/orca_msgs/msg/: TactileFrame.msg
(+10 files in other folders)
